--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,104 +1,61 @@
-#***********************************************************************
-#*                   GNU Lesser General Public License
-#*
-#* This file is part of the GFDL Flexible Modeling System (FMS).
-#*
-#* FMS is free software: you can redistribute it and/or modify it under
-#* the terms of the GNU Lesser General Public License as published by
-#* the Free Software Foundation, either version 3 of the License, or (at
-#* your option) any later version.
-#*
-#* FMS is distributed in the hope that it will be useful, but WITHOUT
-#* ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
-#* FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
-#* for more details.
-#*
-#* You should have received a copy of the GNU Lesser General Public
-#* License along with FMS.  If not, see <http://www.gnu.org/licenses/>.
-#***********************************************************************
+# (C) Copyright 2017-2020 UCAR.
+#
+# This software is licensed under the terms of the Apache Licence Version 2.0
+# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.
 
-# Copyright (c) GFDL, @underwoo
+################################################################################
+# FMS
+################################################################################
 
-cmake_minimum_required(VERSION 3.7...3.15 FATAL_ERROR)
+cmake_minimum_required( VERSION 3.12 )
+project( fms VERSION 2020.4.0 LANGUAGES C Fortran )
 
-# Define the CMake project
-project(FMS
-  VERSION 2021.02.0
-  DESCRIPTION  "GFDL FMS Library"
-  HOMEPAGE_URL "https://www.gfdl.noaa.gov/fms"
-  LANGUAGES C Fortran)
+## Ecbuild integration
+find_package( ecbuild 3.3.2 REQUIRED )
+include( ecbuild_system NO_POLICY_SCOPE )
+ecbuild_declare_project()
+list( APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake )
+set( CMAKE_DIRECTORY_LABELS ${PROJECT_NAME} )
 
-include(GNUInstallDirs)
+include( fms_compiler_flags )
 
-if(NOT CMAKE_BUILD_TYPE MATCHES "^(Debug|Release|RelWithDebInfo|MinSizeRel)$")
-  message(STATUS "Setting build type to 'Release' as none was specified.")
-  set(CMAKE_BUILD_TYPE
-      "Release"
-      CACHE STRING "Choose the type of build." FORCE)
-  set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
-endif()
+################################################################################
+# Dependencies
+################################################################################
 
-if(NOT CMAKE_C_COMPILER_ID MATCHES "^(Intel|GNU|Clang)$")
-  message(
-    WARNING "Compiler not officially supported: ${CMAKE_C_COMPILER_ID}")
-endif()
+find_package( jedicmake QUIET)
+find_package( MPI REQUIRED COMPONENTS C Fortran )
+find_package( OpenMP COMPONENTS C Fortran )
+find_package( NetCDF REQUIRED COMPONENTS Fortran )
 
-if(NOT CMAKE_Fortran_COMPILER_ID MATCHES "^(Intel|GNU)$")
-  message(
-    WARNING "Compiler not officially supported: ${CMAKE_Fortran_COMPILER_ID}")
-endif()
+################################################################################
+# Sources
+################################################################################
 
-# Append directory that contains CMake Modules for building FMS
-list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+list( APPEND fms_hdr_files
+include/file_version.h
+include/fms_platform.h
+)
 
-# Build options
-option(OPENMP    "Build FMS with OpenMP support" OFF)
-option(32BIT     "Build 32-bit (r4) FMS library"  ON)
-option(64BIT     "Build 64-bit (r8) FMS library" OFF)
-
-# Options for compiler definitions
-option(INTERNAL_FILE_NML     "Enable compiler definition -DINTERNAL_FILE_NML"      ON)
-option(ENABLE_QUAD_PRECISION "Enable compiler definition -DENABLE_QUAD_PRECISION"  ON)
-option(GFS_PHYS              "Enable compiler definition -DGFS_PHYS"              OFF)
-option(LARGEFILE             "Enable compiler definition -Duse_LARGEFILE"         OFF)
-
-if(32BIT)
-  list(APPEND kinds "r4")
-endif()
-if(64BIT)
-  list(APPEND kinds "r8")
-endif()
-if(NOT kinds)
-  message(STATUS "Single Precision 32BIT: ${32BIT}")
-  message(STATUS "Double Precision 64BIT: ${64BIT}")
-  message(FATAL_ERROR "Either 32BIT or 64BIT should be ON")
-endif()
-
-# Find dependencies
-find_package(MPI REQUIRED COMPONENTS C Fortran)
-find_package(NetCDF REQUIRED COMPONENTS C Fortran)
-
-# Check for the OpenMP library and set the required compile flags
-if (OPENMP)
-  find_package(OpenMP REQUIRED COMPONENTS C Fortran)
-endif()
-
-# Collect FMS Fortran source files
-list(APPEND fms_fortran_src_files
+list( APPEND fms_src_files
+  affinity/affinity.c
   affinity/fms_affinity.F90
   amip_interp/amip_interp.F90
+  amip_interp/amip_interp.rey_oi.txt
   astronomy/astronomy.F90
-  axis_utils/axis_utils.F90
+  astronomy/astronomy.tech.ps
   axis_utils/axis_utils2.F90
+  axis_utils/axis_utils.F90
   block_control/block_control.F90
   column_diagnostics/column_diagnostics.F90
   constants/constants.F90
+  constants/fmsconstants.F90
   coupler/atmos_ocean_fluxes.F90
   coupler/coupler_types.F90
   coupler/ensemble_manager.F90
+  data_override/data_override.F90
   data_override/get_grid_version_fms2io.F90
   data_override/get_grid_version_mpp.F90
-  data_override/data_override.F90
   diag_integral/diag_integral.F90
   diag_manager/diag_axis.F90
   diag_manager/diag_data.F90
@@ -108,54 +65,175 @@ list(APPEND fms_fortran_src_files
   diag_manager/diag_table.F90
   diag_manager/diag_util.F90
   drifters/cloud_interpolator.F90
-  drifters/drifters.F90
+  drifters/drifters_combine
   drifters/drifters_comm.F90
+  drifters/drifters_compute_k.h
   drifters/drifters_core.F90
+  drifters/drifters.F90
   drifters/drifters_input.F90
   drifters/drifters_io.F90
+  drifters/drifters_push.h
+  drifters/drifters_set_field.h
+  drifters/fms_switches.h
   drifters/quicksort.F90
   exchange/stock_constants.F90
   exchange/xgrid.F90
   field_manager/field_manager.F90
   field_manager/fm_util.F90
-  fms/fms_io.F90
-  fms/fms.F90
+  field_manager/parse.inc
   fms2_io/blackboxio.F90
+  fms2_io/fms2_io.F90
   fms2_io/fms_io_utils.F90
   fms2_io/fms_netcdf_domain_io.F90
   fms2_io/fms_netcdf_unstructured_domain_io.F90
-  fms2_io/fms2_io.F90
   fms2_io/netcdf_io.F90
+  fms/fms.F90
+  fms/fms_io.F90
+  fms/fms_io_unstructured_field_exist.inc
+  fms/fms_io_unstructured_file_unit.inc
+  fms/fms_io_unstructured_get_field_size.inc
+  fms/fms_io_unstructured_get_file_name.inc
+  fms/fms_io_unstructured_get_file_unit.inc
+  fms/fms_io_unstructured_read.inc
+  fms/fms_io_unstructured_register_restart_axis.inc
+  fms/fms_io_unstructured_register_restart_field.inc
+  fms/fms_io_unstructured_save_restart.inc
+  fms/fms_io_unstructured_setup_one_field.inc
+  fms/read_data_2d.inc
+  fms/read_data_3d.inc
+  fms/read_data_4d.inc
+  fms/write_data.inc
   horiz_interp/horiz_interp_bicubic.F90
   horiz_interp/horiz_interp_bilinear.F90
   horiz_interp/horiz_interp_conserve.F90
+  horiz_interp/horiz_interp.F90
   horiz_interp/horiz_interp_spherical.F90
   horiz_interp/horiz_interp_type.F90
-  horiz_interp/horiz_interp.F90
+  include/file_version.h
+  include/fms_platform.h
   interpolator/interpolator.F90
   memutils/memutils.F90
-  monin_obukhov/monin_obukhov_inter.F90
   monin_obukhov/monin_obukhov.F90
-  mosaic/gradient.F90
-  mosaic/grid.F90
-  mosaic/mosaic.F90
+  monin_obukhov/monin_obukhov_inter.F90
   mosaic2/grid2.F90
   mosaic2/mosaic2.F90
-  mpp/mpp.F90
+  mosaic/constant.h
+  mosaic/create_xgrid.c
+  mosaic/create_xgrid.h
+  mosaic/gradient_c2l.c
+  mosaic/gradient_c2l.h
+  mosaic/gradient.F90
+  mosaic/grid.F90
+  mosaic/interp.c
+  mosaic/interp.h
+  mosaic/mosaic.F90
+  mosaic/mosaic_util.c
+  mosaic/mosaic_util.h
+  mosaic/read_mosaic.c
+  mosaic/read_mosaic.h
+  mpp/include/group_update_pack.inc
+  mpp/include/group_update_unpack.inc
+  mpp/include/mpp_alltoall_mpi.h
+  mpp/include/mpp_alltoall_nocomm.h
+  mpp/include/mpp_chksum.h
+  mpp/include/mpp_chksum_int.h
+  mpp/include/mpp_chksum_scalar.h
+  mpp/include/mpp_comm.inc
+  mpp/include/mpp_comm_mpi.inc
+  mpp/include/mpp_comm_nocomm.inc
+  mpp/include/mpp_data_mpi.inc
+  mpp/include/mpp_data_nocomm.inc
+  mpp/include/mpp_define_nest_domains.inc
+  mpp/include/mpp_do_check.h
+  mpp/include/mpp_do_checkV.h
+  mpp/include/mpp_do_get_boundary_ad.h
+  mpp/include/mpp_do_get_boundary.h
+  mpp/include/mpp_do_global_field_ad.h
+  mpp/include/mpp_do_global_field.h
+  mpp/include/mpp_domains_comm.inc
+  mpp/include/mpp_domains_define.inc
+  mpp/include/mpp_domains_misc.inc
+  mpp/include/mpp_domains_reduce.inc
+  mpp/include/mpp_domains_util.inc
+  mpp/include/mpp_do_redistribute.h
+  mpp/include/mpp_do_update_ad.h
+  mpp/include/mpp_do_update.h
+  mpp/include/mpp_do_update_nest.h
+  mpp/include/mpp_do_update_nonblock.h
+  mpp/include/mpp_do_updateV_ad.h
+  mpp/include/mpp_do_updateV.h
+  mpp/include/mpp_do_updateV_nonblock.h
+  mpp/include/mpp_error_a_a.h
+  mpp/include/mpp_error_a_s.h
+  mpp/include/mpp_error_s_a.h
+  mpp/include/mpp_error_s_s.h
+  mpp/include/mpp_gather.h
+  mpp/include/mpp_get_boundary_ad.h
+  mpp/include/mpp_get_boundary.h
+  mpp/include/mpp_global_field_ad.h
+  mpp/include/mpp_global_field.h
+  mpp/include/mpp_global_field_ug.h
+  mpp/include/mpp_global_reduce.h
+  mpp/include/mpp_global_sum_ad.h
+  mpp/include/mpp_global_sum.h
+  mpp/include/mpp_global_sum_tl.h
+  mpp/include/mpp_group_update.h
+  mpp/include/mpp_io_connect.inc
+  mpp/include/mpp_io_misc.inc
+  mpp/include/mpp_io_read.inc
+  mpp/include/mpp_io_unstructured_read.inc
+  mpp/include/mpp_io_unstructured_write.inc
+  mpp/include/mpp_io_util.inc
+  mpp/include/mpp_io_write.inc
+  mpp/include/mpp_read_2Ddecomp.h
+  mpp/include/mpp_read_compressed.h
+  mpp/include/mpp_read_distributed_ascii.h
+  mpp/include/mpp_read_distributed_ascii.inc
+  mpp/include/mpp_reduce_mpi.h
+  mpp/include/mpp_reduce_nocomm.h
+  mpp/include/mpp_scatter.h
+  mpp/include/mpp_sum_ad.inc
+  mpp/include/mpp_sum.inc
+  mpp/include/mpp_sum_mpi_ad.h
+  mpp/include/mpp_sum_mpi.h
+  mpp/include/mpp_sum_nocomm_ad.h
+  mpp/include/mpp_sum_nocomm.h
+  mpp/include/mpp_transmit.inc
+  mpp/include/mpp_transmit_mpi.h
+  mpp/include/mpp_transmit_nocomm.h
+  mpp/include/mpp_type_mpi.h
+  mpp/include/mpp_type_nocomm.h
+  mpp/include/mpp_unstruct_domain.inc
+  mpp/include/mpp_unstruct_pass_data.h
+  mpp/include/mpp_update_domains2D_ad.h
+  mpp/include/mpp_update_domains2D.h
+  mpp/include/mpp_update_domains2D_nonblock.h
+  mpp/include/mpp_update_nest_domains.h
+  mpp/include/mpp_util.inc
+  mpp/include/mpp_util_mpi.inc
+  mpp/include/mpp_util_nocomm.inc
+  mpp/include/mpp_write_2Ddecomp.h
+  mpp/include/mpp_write_compressed.h
+  mpp/include/mpp_write.h
+  mpp/include/mpp_write_unlimited_axis.h
+  mpp/include/system_clock.h
   mpp/mpp_data.F90
   mpp/mpp_domains.F90
   mpp/mpp_efp.F90
+  mpp/mpp.F90
   mpp/mpp_io.F90
+  mpp/mpp_memuse.c
   mpp/mpp_memutils.F90
   mpp/mpp_parameter.F90
+  mpp/mpp_pset.F90
   mpp/mpp_utilities.F90
   platform/platform.F90
   random_numbers/mersennetwister.F90
   random_numbers/random_numbers.F90
-  sat_vapor_pres/sat_vapor_pres_k.F90
   sat_vapor_pres/sat_vapor_pres.F90
-  time_interp/time_interp_external.F90
+  sat_vapor_pres/sat_vapor_pres_k.F90
   time_interp/time_interp_external2.F90
+  time_interp/time_interp_external.F90
   time_interp/time_interp.F90
   time_manager/get_cal_time.F90
   time_manager/time_manager.F90
@@ -163,170 +241,63 @@ list(APPEND fms_fortran_src_files
   topography/topography.F90
   tracer_manager/tracer_manager.F90
   tridiagonal/tridiagonal.F90
-  libFMS.F90
 )
+################################################################################
 
-# Collect FMS C source files
-list(APPEND fms_c_src_files
-  affinity/affinity.c
-  mosaic/create_xgrid.c
-  mosaic/gradient_c2l.c
-  mosaic/interp.c
-  mosaic/mosaic_util.c
-  mosaic/read_mosaic.c
-  mpp/mpp_memuse.c
-)
+################################################################################
+ecbuild_add_library( TARGET   fms
+                     SOURCES  ${fms_hdr_files} ${fms_src_files}
+                     INSTALL_HEADERS_LIST ${fms_hdr_files}
+                     LINKER_LANGUAGE ${FMS_LINKER_LANGUAGE}
+                    )
 
-# Collect FMS header files
-list(APPEND fms_header_files
-  include/file_version.h
-  include/fms_platform.h
-)
+# Link dependencies
+target_link_libraries( fms PUBLIC NetCDF::NetCDF_Fortran )
+target_link_libraries( fms PUBLIC MPI::MPI_Fortran )
+target_link_libraries( fms PUBLIC OpenMP::OpenMP_C OpenMP::OpenMP_Fortran )
 
-# Standard FMS compiler definitions
-list(APPEND fms_defs
-  use_libMPI
-  use_netCDF)
+################################################################################
 
-# check gettid
-include(CheckFunctionExists)
-check_function_exists(gettid HAVE_GETTID)
-if(HAVE_GETTID)
-  list(APPEND fms_defs HAVE_GETTID)
+# Disable compiler checks for GFortran >= 10.x
+if(CMAKE_Fortran_COMPILER_ID MATCHES GNU AND CMAKE_Fortran_COMPILER_VERSION VERSION_GREATER_EQUAL 10)
+    target_compile_options(${PROJECT_NAME} PRIVATE $<$<COMPILE_LANGUAGE:Fortran>:-fallow-invalid-boz>
+                                                   $<$<COMPILE_LANGUAGE:Fortran>:-fallow-argument-mismatch>)
 endif()
 
-# Additional (optional) compiler definitions
-if(GFS_PHYS)
-  list(APPEND fms_defs GFS_PHYS)
+if(UNIX AND NOT APPLE)
+    #FIX for linking error with glibc>=2.30 which includes gettid in unistd.h if macro _GNU_SOURCE is set
+    include(CheckSymbolExists)
+    include(CMakePushCheckState)
+    cmake_push_check_state(RESET)
+    set(CMAKE_REQUIRED_DEFINITIONS "-D_GNU_SOURCE=1")
+    check_symbol_exists("gettid" "unistd.h" HAVE_GETTID)
+    unset(CMAKE_REQUIRED_DEFINITIONS)
+    cmake_pop_check_state() # Restore any modified state
+    if(HAVE_GETTID)
+        target_compile_definitions(fms PRIVATE HAVE_GETTID)
+    endif()
 endif()
 
-if(INTERNAL_FILE_NML)
-  list(APPEND fms_defs INTERNAL_FILE_NML)
-endif()
 
-if(ENABLE_QUAD_PRECISION)
-  list(APPEND fms_defs ENABLE_QUAD_PRECISION)
-endif()
+# Fortran module output directory for build and install interfaces
+set(MODULE_DIR ${PROJECT_NAME}/module)
+set_target_properties(${PROJECT_NAME} PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR}/${MODULE_DIR})
+install(DIRECTORY ${CMAKE_BINARY_DIR}/${MODULE_DIR}/ DESTINATION ${CMAKE_INSTALL_LIBDIR}/${MODULE_DIR})
+target_include_directories(${PROJECT_NAME} INTERFACE
+                            $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/${MODULE_DIR}>
+                            $<INSTALL_INTERFACE:${CMAKE_INSTALL_LIBDIR}/${MODULE_DIR}>)
 
-if(LARGEFILE)
-  list(APPEND fms_defs use_LARGEFILE)
-endif()
+# Private .inc include locations
+target_include_directories( fms PRIVATE
+                    ${CMAKE_CURRENT_SOURCE_DIR}/mpp/include
+                    ${CMAKE_CURRENT_SOURCE_DIR}/fms2_io/include
+                    ${CMAKE_CURRENT_SOURCE_DIR}/fms)
 
-# Precision-based compiler definitions
-if(32BIT)
-  list(APPEND r4_defs OVERLOAD_R4 OVERLOAD_R8)
-endif()
+# Installed .h include locations (fms_hdr_files)
+target_include_directories( fms PUBLIC
+                    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+                    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}> )
 
-# Add platform specific compiler definitions
-if(APPLE)
-  list(APPEND fms_defs __APPLE__)
-endif()
-
-# Obtain compiler-specific flags
-include(fms_compiler_flags)
-
-foreach(kind ${kinds})
-
-  set(libTgt fms_${kind})
-  set(includeDir "include_${kind}")
-  set(moduleDir "${CMAKE_CURRENT_BINARY_DIR}/${includeDir}")
-
-  # C
-  add_library(${libTgt}_c OBJECT ${fms_c_src_files})
-
-  target_include_directories(${libTgt}_c PRIVATE include)
-  target_compile_definitions(${libTgt}_c PRIVATE "${fms_defs}")
-
-  target_link_libraries(${libTgt}_c PRIVATE NetCDF::NetCDF_C
-                                            MPI::MPI_C)
-
-  if(OpenMP_C_FOUND)
-    target_link_libraries(${libTgt}_c PRIVATE OpenMP::OpenMP_C)
-  endif()
-
-  # Fortran
-  add_library(${libTgt}_f OBJECT ${fms_fortran_src_files})
-
-  target_include_directories(${libTgt}_f PRIVATE include
-                                                 fms
-                                                 fms2_io/include
-                                                 mpp/include)
-  target_compile_definitions(${libTgt}_f PRIVATE "${fms_defs}")
-  target_compile_definitions(${libTgt}_f PRIVATE "${${kind}_defs}")
-
-  set_target_properties(${libTgt}_f PROPERTIES COMPILE_FLAGS
-                                               "${${kind}_flags}")
-  set_target_properties(${libTgt}_f PROPERTIES Fortran_MODULE_DIRECTORY
-                                               ${moduleDir})
-
-  target_link_libraries(${libTgt}_f PRIVATE NetCDF::NetCDF_Fortran
-                                            MPI::MPI_Fortran)
-
-  if(OpenMP_Fortran_FOUND)
-    target_link_libraries(${libTgt}_f PRIVATE OpenMP::OpenMP_Fortran)
-  endif()
-
-  # FMS (C + Fortran)
-  add_library(${libTgt} STATIC $<TARGET_OBJECTS:${libTgt}_c>
-                               $<TARGET_OBJECTS:${libTgt}_f>)
-
-  target_include_directories(${libTgt} PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/fms>
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/fms2_io/include>
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/mpp/include>)
-
-  target_include_directories(${libTgt} INTERFACE
-    $<BUILD_INTERFACE:${moduleDir}>
-    $<INSTALL_INTERFACE:${includeDir}>)
-
-  target_compile_definitions(${libTgt} PUBLIC "${fms_defs}")
-  target_compile_definitions(${libTgt} PUBLIC "${${kind}_defs}")
-
-  target_link_libraries(${libTgt} PUBLIC NetCDF::NetCDF_Fortran
-                                         MPI::MPI_Fortran)
-
-  if(OpenMP_Fortran_FOUND)
-    target_link_libraries(${libTgt} PRIVATE OpenMP::OpenMP_Fortran)
-  endif()
-
-  add_library(FMS::${libTgt} ALIAS ${libTgt})
-
-  list(APPEND LIB_TARGETS ${libTgt})
-  install(DIRECTORY ${moduleDir}    DESTINATION ${CMAKE_INSTALL_PREFIX})
-  install(FILES ${fms_header_files} DESTINATION ${CMAKE_INSTALL_PREFIX}/${includeDir})
-
-endforeach()
-
-install(
-  TARGETS ${LIB_TARGETS}
-  EXPORT FMSExports
-  RUNTIME DESTINATION bin
-  LIBRARY DESTINATION lib
-  ARCHIVE DESTINATION lib)
-
-### Package config
-include(CMakePackageConfigHelpers)
-set(CONFIG_INSTALL_DESTINATION lib/cmake/fms)
-
-export(EXPORT FMSExports
-  NAMESPACE FMS::
-  FILE fms-targets.cmake)
-
-configure_package_config_file(
-  ${CMAKE_CURRENT_SOURCE_DIR}/cmake/FMSConfig.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/fms-config.cmake
-  INSTALL_DESTINATION ${CONFIG_INSTALL_DESTINATION})
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/fms-config.cmake
-  DESTINATION ${CONFIG_INSTALL_DESTINATION})
-
-write_basic_package_version_file(
-  ${CMAKE_CURRENT_BINARY_DIR}/fms-config-version.cmake
-  VERSION ${PROJECT_VERSION}
-  COMPATIBILITY AnyNewerVersion)
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/fms-config-version.cmake
-  DESTINATION ${CONFIG_INSTALL_DESTINATION})
-
-install(EXPORT FMSExports
-  NAMESPACE FMS::
-  FILE fms-targets.cmake
-  DESTINATION ${CONFIG_INSTALL_DESTINATION})
+# Export package config
+ecbuild_install_project( NAME fms )
+ecbuild_print_summary()
